# candle

./: .gitignore  .pre-commit-config.yaml  LICENSE  README  README.md  pyproject.toml  requirements.txt
notebooks/: 00_scratchpad.ipynb  01_shape_integrity.ipynb  scratchpad.ipynb
src/candle/: __init__.py
src/candle/core/: tensor.py
src/candle/tests/: test_tensor.py
src/candle/utils/: __init__.py  operations.py
src/smoltorch/: __init__.py  tensor.py
src/smoltorch/tests/: test_tensor.py
