[project]
name = "candle"
version = "0.1.0"
authors = [{ name = "Dewith", email = "dewithmiramon@gamil.com" }]
description = "A smol reimplementation of Pytorch for learning purposes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ruff>=0.8.3", "setuptools>=75.6.0"]
license = { file = "MIT License" }
keywords = ["deep learning", "machine learning", "numpy", "torch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/dewith/candle.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["candle*"]
exclude = ["candle.tests*"]
namespaces = false

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "C90",
    "N",
    "I",
    "PD",
    "PL",
    "RUF",
    "ANN",
    "B",
    "LOG",
    "G",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
    "RT01",
    "PR01",
]
